Fix reset button visibility #19

--- a/src/ResetButton.css
+++ b/src/ResetButton.css
@@ -30,12 +30,12 @@
 
 .reset-button > svg {
     display: block;
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
     margin: auto;
 }
 
 .reset-button:active > svg {
-    width: 19px;
-    height: 19px;
+    width: 22px;
+    height: 22px;
 }
